<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_reg"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20sp"
            android:layout_margin="10sp"/>

        <EditText
            android:id="@+id/text_login_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/text_login"
            android:layout_marginTop="150sp"
            android:layout_marginRight="30sp"/>

        <EditText
            android:id="@+id/text_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/text_password"
            android:layout_marginRight="30sp"/>

        <EditText
            android:id="@+id/text_name_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/text_FIO"
            android:layout_marginRight="30sp"/>

        <EditText
            android:id="@+id/text_phone_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/text_number_phone"
            android:layout_marginRight="30sp"/>

        <Button
            android:id="@+id/start_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reg"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>