<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="153dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/main_button_authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/button_authorization" />

        <Button
            android:id="@+id/main_button_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/button_reg" />

        <Button
            android:id="@+id/button_info"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_info"
            android:textColor="@color/color_button_info" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="418dp"
        android:layout_height="311dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="250dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="408dp"
            android:layout_height="62dp"
            android:text="@string/main_number_info"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_number"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/color_button_info"
            android:textColorHighlight="@color/black"
            android:textSize="40sp"
            tools:ignore="MissingConstraints" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="248dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints"></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>